--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,3 +76,19 @@ header li {
    background-repeat: no-repeat;
    background-size: cover;
 }
+
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0;
+  margin: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.centerfade {
+  -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))
+}
