--- a/src/css/style.css
+++ b/src/css/style.css
@@ -89,6 +89,7 @@ header li {
   height: 100%;
 }
 
-.centerfade {
-  -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))
+.hidden {
+  display: none;
+}
 }
