--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,6 +20,11 @@ section {
   color: #cecece;
 }
 
+.darkblue {
+  background-color: rgba(25,29,35, 1);
+  color: #cecece;
+}
+
 .darkblue_transparent {
   background-color: rgba(25,29,35, 0.85);
   color: #cecece;
@@ -65,6 +70,7 @@ section h2 {
   padding-top: 15vh;
   text-align: center;
   font-size: 2em;
+  font-weight: 200;
 }
 
 .one-third {
