--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -9,6 +9,7 @@
   height 69vw;
   background-color: #1c1d20;
   overflow: hidden;
+  cursor: pointer;
 }
 
 @media (min-width: 800px){
@@ -36,6 +37,7 @@
   width: inherit;
   height: inherit;
   opacity: 0.5;
+  transition: opacity 1s;
 }
 
 .portfolio_preview_picture {
@@ -43,6 +45,22 @@
   height: inherit;
 }
 
-.portfolio_preview :hover{
+.portfolio_preview:hover h3{
+  opacity: 0.8;
+}
+.portfolio_preview:hover .overlay{
+  opacity: 0.1;
+}
 
+.portfolio_preview > h3 {
+  position: absolute;
+  top: 40%;
+  left: 0;
+  width: 100%;
+  opacity: 1;
+  vertical-align: center;
+  text-align: center;
+  font-size: 1.5em;
+  opacity: 0;
+  transition: opacity 1s;
 }
