changed heading layout

--- a/src/css/font.css
+++ b/src/css/font.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'lato', sans-serif;
     color: #191d22;
     font-weight: 300;
     letter-spacing: 0.05em;
@@ -10,7 +10,7 @@ body {
   color: #cecece;
 }
 .lightgrey {
-  color: #7b7b7b;
+  color: #939393;
 }
 .black {
   color: #191d22;
