--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,7 +26,7 @@ section {
 }
 
 .darkblue_transparent {
-  background-color: rgba(35,35,35, 0.75);
+  background-color: rgba(41, 44, 47, 0.75);
   color: #cecece;
 }
 
@@ -49,21 +49,33 @@ section {
   height: 100%;
 }
 
-
+#startscreen {
+  background-color:
+}
 div.startscreen_heading {
   position: absolute;
-  top: 3em;
-  width: 100%;
+  top: 0;
+  width: 38%;
+  height: 100%;
   text-align: center;
 }
 
 div.startscreen_heading h1 {
-  font-size: 3em;
-  margin-top: 0.1em;
+  position: absolute;
+  top: 5%;
+  left: 5vw;
+  font-size: 4em;
+  margin-top: 0;
 }
 div.startscreen_heading h3  {
   margin-top: -1.5em;
   font-size: 1.75em;
+}
+
+div.startscreen_heading > ul {
+  position: absolute;
+  left: 5vw;
+  bottom: 5%;
 }
 
 section h2 {
