--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -36,6 +36,8 @@
   left: 0;
   width: inherit;
   height: inherit;
+  background-color:  rgba(41, 44, 47, 0.75);
+  background-blend-mode: saturation;
   opacity: 0.5;
   transition: opacity 1s;
 }
@@ -54,7 +56,9 @@
 
 .portfolio_preview > h3 {
   position: absolute;
-  top: 40%;
+  bottom: 0;
+  margin-bottom: 0;
+
   left: 0;
   width: 100%;
   opacity: 1;
