--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,7 @@ body, section, div {
 }
 
 body {
-  background-color: #cecece;
+  background-color: #dedede;
   overflow-x: hidden;
 }
 
@@ -26,7 +26,7 @@ section {
 }
 
 .darkblue_transparent {
-  background-color: rgba(41, 44, 47, 0.75);
+  background-color: rgba(41, 44, 47, 0.7);
   color: #cecece;
 }
 
@@ -49,7 +49,12 @@ section {
   height: 100%;
 }
 
+#nav {
+  transition: background-color 0.5s;
+  background-color: rgba(41, 44, 47, 0.8);
 }
+#nav:hover {
+  background-color: rgba(41, 44, 47, 0.9);
 }
 
 section h2 {
