Nav: scrolling instead of jumping

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,9 @@ body, section, div {
   margin: 0;
   padding: 0;
 }
-
+a {
+  cursor: pointer;
+}
 body {
   background-color: #dedede;
   overflow-x: hidden;
