responsive start screen

--- a/src/css/startscreen.css
+++ b/src/css/startscreen.css
@@ -5,8 +5,18 @@
 #startscreen_menu {
   position: absolute;
   top: 0;
-  width: 33.333%;
+  width: 100%;
   height: 100%;
+}
+@media (min-width: 1000px){
+  #startscreen_menu {
+    width: 50%;
+  }
+  @media (min-width: 1400px){
+    #startscreen_menu {
+      width: 33.333%;
+    }
+  }
 }
 
 div.startscreen_heading {
