--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -36,7 +36,7 @@
   left: 0;
   width: inherit;
   height: inherit;
-  background-color:  rgba(41, 44, 47, 0.75);
+  background-color:  rgba(41, 44, 47, 0.5);
   background-blend-mode: saturation;
   opacity: 0.5;
   transition: opacity 1s;
@@ -48,15 +48,15 @@
 }
 
 .portfolio_preview:hover h3{
-  opacity: 0.8;
+  opacity: 0.9;
 }
 .portfolio_preview:hover .overlay{
-  opacity: 0.1;
+  opacity: 0;
 }
 
 .portfolio_preview > h3 {
   position: absolute;
-  bottom: 0;
+  top: 40%;
   margin-bottom: 0;
 
   left: 0;
