--- a/src/css/startscreen.css
+++ b/src/css/startscreen.css
@@ -1,21 +1,12 @@
 #startscreen {
   top: 0;
+  font-size: 0.5em;
 }
 #startscreen_menu {
   position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
-}
-@media (min-width: 1000px){
-  #startscreen_menu {
-    width: 50%;
-  }
-  @media (min-width: 1400px){
-    #startscreen_menu {
-      width: 33.333%;
-    }
-  }
 }
 
 div.startscreen_heading {
@@ -44,6 +35,24 @@ div.startscreen_heading h3  {
   text-indent: -1em;
   font-size: 2.5em;
 }
+
 #startscreen_menu > ul > li {
   padding-top: 1em;
+}
+
+@media (min-width: 800px) {
+
+  #startscreen{
+    font-size: 1em;
+  }
+  @media (min-width: 1000px){
+    #startscreen_menu {
+      width: 50%;
+    }
+    @media (min-width: 1400px){
+      #startscreen_menu {
+        width: 33.333%;
+      }
+    }
+  }
 }
