changed margin of headings

--- a/src/css/font.css
+++ b/src/css/font.css
@@ -39,7 +39,7 @@ body {
 }
 
 .text {
-  font-family: 'Lato', sans-serif;
+  font-family: 'lato', sans-serif;
 }
 .justify {
   text-align: justify;
